// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Graph > React Agent Graph Structure > should create correct graph structure: no_tools_no_hooks_no_format 1`] = `
"graph TD;
	__start__ --> agent;
	agent --> __end__;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: no_tools_no_hooks_with_format 1`] = `
"graph TD;
	__start__ --> agent;
	agent --> generate_structured_response;
	generate_structured_response --> __end__;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: no_tools_with_both_hooks_no_format 1`] = `
"graph TD;
	__start__ --> pre_model_hook;
	agent --> post_model_hook;
	post_model_hook --> __end__;
	pre_model_hook --> agent;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: no_tools_with_both_hooks_with_format 1`] = `
"graph TD;
	__start__ --> pre_model_hook;
	agent --> post_model_hook;
	generate_structured_response --> __end__;
	post_model_hook --> generate_structured_response;
	pre_model_hook --> agent;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: no_tools_with_post_hook_no_format 1`] = `
"graph TD;
	__start__ --> agent;
	agent --> post_model_hook;
	post_model_hook --> __end__;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: no_tools_with_post_hook_with_format 1`] = `
"graph TD;
	__start__ --> agent;
	agent --> post_model_hook;
	generate_structured_response --> __end__;
	post_model_hook --> generate_structured_response;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: no_tools_with_pre_hook_no_format 1`] = `
"graph TD;
	__start__ --> pre_model_hook;
	agent --> __end__;
	pre_model_hook --> agent;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: no_tools_with_pre_hook_with_format 1`] = `
"graph TD;
	__start__ --> pre_model_hook;
	agent --> generate_structured_response;
	generate_structured_response --> __end__;
	pre_model_hook --> agent;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: two_tools_no_hooks_no_format 1`] = `
"graph TD;
	__start__ --> agent;
	tool1 --> agent;
	tool2 --> agent;
	agent -.-> tool1;
	agent -.-> tool2;
	agent -.-> __end__;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: two_tools_no_hooks_with_format 1`] = `
"graph TD;
	__start__ --> agent;
	generate_structured_response --> __end__;
	tool1 --> agent;
	tool2 --> agent;
	agent -.-> tool1;
	agent -.-> tool2;
	agent -.-> generate_structured_response;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: two_tools_with_both_hooks_no_format 1`] = `
"graph TD;
	__start__ --> pre_model_hook;
	agent --> post_model_hook;
	pre_model_hook --> agent;
	tool1 --> pre_model_hook;
	tool2 --> pre_model_hook;
	post_model_hook -.-> pre_model_hook;
	post_model_hook -.-> tool1;
	post_model_hook -.-> tool2;
	post_model_hook -.-> __end__;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: two_tools_with_both_hooks_with_format 1`] = `
"graph TD;
	__start__ --> pre_model_hook;
	agent --> post_model_hook;
	generate_structured_response --> __end__;
	pre_model_hook --> agent;
	tool1 --> pre_model_hook;
	tool2 --> pre_model_hook;
	post_model_hook -.-> pre_model_hook;
	post_model_hook -.-> tool1;
	post_model_hook -.-> tool2;
	post_model_hook -.-> generate_structured_response;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: two_tools_with_post_hook_no_format 1`] = `
"graph TD;
	__start__ --> agent;
	agent --> post_model_hook;
	tool1 --> agent;
	tool2 --> agent;
	post_model_hook -.-> agent;
	post_model_hook -.-> tool1;
	post_model_hook -.-> tool2;
	post_model_hook -.-> __end__;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: two_tools_with_post_hook_with_format 1`] = `
"graph TD;
	__start__ --> agent;
	agent --> post_model_hook;
	generate_structured_response --> __end__;
	tool1 --> agent;
	tool2 --> agent;
	post_model_hook -.-> agent;
	post_model_hook -.-> tool1;
	post_model_hook -.-> tool2;
	post_model_hook -.-> generate_structured_response;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: two_tools_with_pre_hook_no_format 1`] = `
"graph TD;
	__start__ --> pre_model_hook;
	pre_model_hook --> agent;
	tool1 --> pre_model_hook;
	tool2 --> pre_model_hook;
	agent -.-> tool1;
	agent -.-> tool2;
	agent -.-> __end__;
"
`;

exports[`Graph > React Agent Graph Structure > should create correct graph structure: two_tools_with_pre_hook_with_format 1`] = `
"graph TD;
	__start__ --> pre_model_hook;
	generate_structured_response --> __end__;
	pre_model_hook --> agent;
	tool1 --> pre_model_hook;
	tool2 --> pre_model_hook;
	agent -.-> tool1;
	agent -.-> tool2;
	agent -.-> generate_structured_response;
"
`;
